@@ -169,3 +169,15 @@ pre {
 	font-weight: medium;
 	font-size: 10pt;
 }
+
+.new {
+	background-color: #00BB00;
+	border-radius: 3px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-left: 4px;
+	padding-right: 4px;
+	color: white;
+	font-family: arial;
+	font-size: 12px;
+}
