@@ -1,3 +1,4 @@
+[=#enterprise]
 {{{#!blockquote
 '''SQL Relay Enterprise Modules''' provide advanced features not available in the standard distribution.
 
