@@ -1,4 +1,7 @@
 1.0.0 - updated md5 pwdenc to use rudiments md5 class
+	solved a long-standing hang that could occur if the database password
+		expired while sqlrelay was running, and the sqlr-scaler
+		attempted to start new connections
 
 0.67.0 - general documenation clean-up
 	added missing all: target to man/Makefile
